# github-users

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: .env
github_users/: settings.py
github_users/api/: async_http_client.py  service.py
github_users/api/handlers/: users.py
github_users/core/: user_manager.py
github_users/models/: users.py
tests/: conftest.py  pytest.ini
tests/api/: test_service.py
tests/integration/api/: test_users_handler.py
tests/integration/core/: test_user_manager.py
